Boid Abstract Class and First Predator Implementation

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,13 @@
 [World_Values]
-population_size = 100
+prey_pop_size = 100
+predator_pop_size = 10
 boid_genome_startup_variance = 0.3
-xmin = -200
-xmax = 200
+xmin = -300
+xmax = 300
 ymin = -200
 ymax = 200
 
-[Genome_Values]
+[Prey_Values]
 visual_range = 40.0
 turning_factor = 0.25
 screen_margin = 30.0
@@ -17,5 +18,11 @@ propulsion = 0.05
 speed_pref = 5
 avoid_factor = 0.05
 protected_range = 2
-matching_factor = 0.05
+matching_factor = 0.075
 centering_factor = 0.0005
+predator_detection_range = 20
+predator_turn_factor = 0.75
+
+[Predator_Values]
+speed_limit = 13
+speed_pref = 5
