Working Genetic Algorithm code

--- a/config.ini
+++ b/config.ini
@@ -26,3 +26,14 @@ predator_turn_factor = 0.75
 [Predator_Values]
 speed_limit = 13
 speed_pref = 5
+catch_radius = 2
+
+[Prey_Evolution]
+mutation_rate = 0.15
+crossover_type = "bit-mask"
+selection_type = "roulette"
+
+[Predator_Evolution]
+mutation_rate = 0.15
+crossover_type = "bit-mask"
+selection_type = "roulette"
