Semi-Working state of spatial Pertition. Shows good speedup so far

--- a/config.ini
+++ b/config.ini
@@ -27,6 +27,10 @@ predator_turn_factor = 0.75
 speed_limit = 13
 speed_pref = 5
 catch_radius = 2
+visual_range = 60
+close_radius = 13
+group_follow_size = 5
+grouping_radius = 30
 
 [Prey_Evolution]
 mutation_rate = 0.15
